In-progress: Feature #18793 - implement keycloak login
https://redmine.biodiversity.agr.gc.ca/issues/18793

- added environment setup in Dockerfile, scripts, and docker-compose
with Postgres and MinIO, based on Tom's previous work
- added keycloak and related dependencies in pom; configuration;
docker-compose service
- successfully redirects to keycloak login in browser, but can't get the
token yet